--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gatsby"
   ],
   "scripts": {
+    "dev": "gatsby develop",
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
@@ -15,6 +16,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
+    "dat.gui": "^0.7.7",
     "gatsby": "^3.0.1",
     "gatsby-plugin-gatsby-cloud": "^2.0.0",
     "gatsby-plugin-image": "^1.0.1",
@@ -28,6 +30,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "three": "^0.126.1"
   }
 }
